Archive2/5d/18e045c185838b/output
main.cpp: In member function 'void CAS::pSearch(int)':
main.cpp:29:6: warning: unused variable 'a' [-Wunused-variable]
  int a=10;
      ^
main.cpp: At global scope:
main.cpp:27:18: warning: unused parameter 'i' [-Wunused-parameter]
 void pSearch(int i)
                  ^
main.cpp: In member function 'void CAS::parallelSearchINIT(unsigned int, int)':
main.cpp:48:50: error: invalid use of non-static member function
     threads.push_back(std::thread (CAS::pSearch,i));
                                                  ^
